src/types/tests/snapshots/tgbot__types__tests__bot__bot.snap
---
source: src/types/tests/bot.rs
expression: "Bot::new(1, \"loo_maclin_bot\",\n\"Loo\").with_last_name(\"Maclin\").with_can_connect_to_business(true).with_can_join_groups(true).with_can_manage_bots(false).with_can_read_all_group_messages(true).with_has_main_web_app(true).with_has_topics_enabled(false).with_supports_inline_queries(true)"
---
{
  "first_name": "Loo",
  "id": 1,
  "username": "loo_maclin_bot",
  "allows_users_to_create_topics": false,
  "can_connect_to_business": true,
  "can_join_groups": true,
  "can_manage_bots": false,
  "can_read_all_group_messages": true,
  "has_main_web_app": true,
  "has_topics_enabled": false,
  "last_name": "Maclin",
  "supports_guest_queries": false,
  "supports_inline_queries": true
}
