src/types/tests/snapshots/tgbot__types__tests__bot__bot_access_settings.snap
---
source: src/types/tests/bot.rs
expression: "BotAccessSettings::default()"
---
{
  "is_access_restricted": false
}
