src/types/tests/snapshots/tgbot__types__tests__bot__bot_command-2.snap
---
source: src/types/tests/bot.rs
expression: bot_command
---
{
  "command": "test",
  "description": "test",
  "is_ephemeral": true
}
