src/types/tests/snapshots/tgbot__types__tests__bot__bot_command.snap
---
source: src/types/tests/bot.rs
expression: bot_command
---
{
  "command": "name",
  "description": "description"
}
