src/types/tests/snapshots/tgbot__types__tests__bot__bot_command_scope-6.snap
---
source: src/types/tests/bot.rs
expression: value
---
{
  "type": "chat_administrators",
  "chat_id": 1
}
