src/types/tests/snapshots/tgbot__types__tests__bot__bot_command_scope-7.snap
---
source: src/types/tests/bot.rs
expression: value
---
{
  "type": "chat_member",
  "chat_id": 1,
  "user_id": 1
}
