src/types/tests/snapshots/tgbot__types__tests__bot__bot_description.snap
---
source: src/types/tests/bot.rs
expression: "BotDescription::new(\"test-description\")"
---
{
  "description": "test-description"
}
