src/types/tests/snapshots/tgbot__types__tests__bot__bot_name.snap
---
source: src/types/tests/bot.rs
expression: "BotName::new(\"test_bot\")"
---
{
  "name": "test_bot"
}
