src/types/tests/snapshots/tgbot__types__tests__bot__bot_short_description.snap
---
source: src/types/tests/bot.rs
expression: "BotShortDescription::new(\"test-short-description\")"
---
{
  "short_description": "test-short-description"
}
