src/types/tests/snapshots/tgbot__types__tests__bot__bot_subscription_updated.snap
---
source: src/types/tests/bot.rs
expression: data
---
{
  "invoice_payload": "payload",
  "state": "active",
  "user": {
    "first_name": "John",
    "id": 1,
    "is_bot": false
  }
}
