src/types/tests/snapshots/tgbot__types__tests__bot__delete_bot_commands-2.snap
---
source: src/types/tests/bot.rs
expression: actual_data
---
{
  "language_code": "ru",
  "scope": {
    "type": "default"
  }
}
